                         CHANGES version 2.7

              This file summarizes changes made since 1.0

Version 2.7
-----------
* Added tentative support for Oracle. Thanks to Volodymyr
  Tarasenko, and Sergey Pavlov for implementing this.
* Added new convenience zdb.h meta include file which
  can be used to include all required API interfaces
* Internal optimizing changes and improvements
  Thanks to Bogdan Nicula for suggestions.
* A C99 capable compiler is required to build libzdb
* SQLite: added "heap_limit" URL property. Makes SQLite 
  auto-release unused memory if memory usage goes above 
  the specified limit [KB]. Require that SQLite is
  compiled with the SQLITE_ENABLE_MEMORY_MANAGEMENT option
  to take effect.
* SQLite: Clear connection on rollback to prevent SQLite
  from issue an SQLITE_BUSY error if there are pending
  selects in progress.
Bug fixes:
* SQLite: Ensure that the database file is specified in
  connection URL. Thanks to Bogdan Nicula.
* PostgreSQL: Implemented Connection_setQueryTimeout()

Version 2.6
-----------
* Internal optimizing changes and improvements
* Enable shared cache mode for SQLite >= 3.5
* Added new configure option --enable-sqliteunlock which
  enables SQLite unlock notification. This feature requires
  SQLite >= 3.6.12 compiled with the SQLITE_ENABLE_UNLOCK_NOTIFY
  C-preprocessor symbol. This option greatly improves upon 
  SQLite concurrency when libzdb and SQLite is used from a 
  multi-threaded program.
* Removed deprecated ResultSet_readData() from API
Bug fixes:
* PostgreSQL: Unescape values retrieved via ResultSet_getBlob()
  and via ResultSet_getBlobByName(). By an incurie, unescape was
  left out of libzdb version 2.5.

Version 2.5
-----------
* Removed GPL license exceptions. The library is now licensed under
  the  GPL version 3 only. 
* Deprecated ResultSet_readData(). This function _was_ useful for 
  MySQL, but not for other drivers where it had some overhead.